# Stock2to3Selection

./: .gitignore  README.md  Spec.md  二进三选股需求书.md
android-app/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
backend/: __init__.py  requirements.txt  run_server.ps1
backend/app/: __init__.py  main.py  runtime_env.py
backend/app/data/: sample_data.py
backend/app/models/: __init__.py  api_v1.py  schemas.py
backend/app/routes/: __init__.py  debug.py  screening.py  v1_screening.py
backend/app/services/: __init__.py  akshare_service.py  cache_service.py  screener_service.py
backend/tests/: load_force_refresh_market_signal.py  load_smoke.py  test_api.py
docs/api/: legacy-contract.md  versioning.md
docs/architecture/: client-compatibility.md
docs/deployment/: aliyun-backend-deployment.md
docs/release/: version-policy.md
docs/testing/: android-regression-checklist.md
docs/windows/: desktop-shell-architecture.md  run-host.md
web/desktop-shell/: index.html
web/desktop-shell/src/: app.js  bridge.js  styles.css
windows-mfc/: CMakeLists.txt  build-vs2008.bat  build-winforms.bat
windows-mfc/installer/: moneyapp-setup.sed
windows-mfc/legacy-src/: MoneyAppDesktopLegacy.cpp
windows-mfc/src/: AppHostBridge.cpp  AppHostBridge.h  HostConfigStore.cpp  HostConfigStore.h  HostMessageTypes.h  MainFrame.cpp  MainFrame.h  MoneyAppDesktop.cpp  WebViewHost.cpp  WebViewHost.h
windows-mfc/winforms-host/: MoneyAppDesktopWinForms.cs
(+13 files in other folders)
